# neuraledge

./: .gitignore  README.md  run.sh
analyzer/: requirements.txt
analyzer/src/: csv_loader.py  main.py  plots.py  sensor_meta.py  timeseries.py
edge/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  neuraledge_edge
edge/config/: baseline.yaml  fault.yaml  faulty.yaml  prova.yaml  simulation.yaml  stress.yaml
edge/include/config/: AppConfig.hpp  ConfigLoader.hpp  ModelConfig.hpp  SensorConfig.hpp
edge/include/factory/: SensorFactory.hpp
edge/include/fault/: DriftFault.hpp  DropoutFault.hpp  SaturationFault.hpp  ScalingFault.hpp  StuckFault.hpp
edge/include/logger/: CsvLogger.hpp  ILogger.hpp
edge/include/noise/: DriftNoise.hpp  GaussianNoise.hpp  INoiseModel.hpp  ImpulseNoise.hpp  PeriodicNoise.hpp  PinkNoise.hpp  UniformNoise.hpp
edge/include/runner/: SensorRunner.hpp
edge/include/sensor/: Sample.hpp  Sensor.hpp
edge/include/signal/: CurrentSignal.hpp  HumiditySignal.hpp  ISignalModel.hpp  PressureSignal.hpp  RampSignal.hpp  SpeedSignal.hpp  SquareWaveSignal.hpp  StepResponseSignal.hpp  TemperatureSignal.hpp  VibrationSignal.hpp
edge/include/utils/: TimestampUtils.hpp
edge/src/: main.cpp
edge/src/config/: ConfigLoader.cpp
edge/src/factory/: SensorFactory.cpp
edge/src/fault/: DriftFault.cpp  DropoutFault.cpp  NoFault.cpp  SaturationFault.cpp  ScalingFault.cpp  StuckFault.cpp
edge/src/logger/: CsvLogger.cpp
edge/src/noise/: DriftNoise.cpp  GaussianNoise.cpp  ImpulseNoise.cpp  PeriodicNoise.cpp  PinkNoise.cpp  UniformNoise.cpp
edge/src/runner/: SensorRunner.cpp
edge/src/sensor/: Sensor.cpp
edge/src/signal/: CurrentSignal.cpp  HumiditySignal.cpp  PressureSignal.cpp  RampSignal.cpp  SpeedSignal.cpp  SquareWaveSignal.cpp  StepResponseSignal.cpp  TemperatureSignal.cpp  VibrationSignal.cpp
gui/backend/: app.py  model_schema.py  requirement.txt
gui/frontend/src/: App.jsx  index.css
include/fault/: IFaultModel.hpp  NoFault.hpp  SpikeFault.hpp
include/sensor/: ISensor.hpp
include/signal/: ISignalModel.hpp
include/utils/: TimestampUtils.hpp
output/: sensor_data.csv  sensor_data_baseline.csv
src/fault/: NoFault.cpp  SpikeFault.cpp
src/sensor/: Sensor.cpp
